# ENSxRaidium-Data-Challenge

./: README.md  pyproject.toml
scripts/: train.py  train_cascade.py
scripts/data_preprocessing/: prepare_data.py
scripts/inference/: inference_find_thresholds.py  run_inference.py  run_inference_cascade_final.py  run_inference_no_thresh.py  save_dices.py
src/ens_data_challenge/data_processing/: augmentations.py  dataloader.py  dataset.py  make_splits.py
src/ens_data_challenge/data_processing/utils/: preprocess_utils.py
src/ens_data_challenge/inference/: find_thresholds.py  inference.py
src/ens_data_challenge/models/: losses.py  unet.py
src/ens_data_challenge/training/: trainer.py
